# veritypay-tooling

./: .editorconfig  .gitignore  ARCHITECTURE.md  CLI_PHILOSOPHY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/vp-cli/: Cargo.toml
crates/vp-cli/src/: config.rs  json.rs  lib.rs  main.rs  output.rs  render.rs
crates/vp-cli/tests/: cli.rs
crates/vp-core/: Cargo.toml
crates/vp-core/src/: config.rs  context.rs  lib.rs  spec_repository.rs  spec_root.rs  validation_config.rs  validator.rs  validator_info.rs  yaml.rs
crates/vp-crossref/: Cargo.toml
crates/vp-crossref/src/: constants.rs  corpus.rs  discovery.rs  kind.rs  lib.rs  markdown.rs  reference.rs  registry_lookup.rs  resolve.rs  spec_model.rs  validate.rs  validator.rs
crates/vp-crossref/tests/: crossref_validation_fixtures.rs  markdown_discovery_fixtures.rs  reference_graph_validation.rs  spec_model_loading.rs
crates/vp-crossref/tests/fixtures/: mixed_references.md
crates/vp-crossref/tests/fixtures/broken_anchor/docs/: page.md  target.md
crates/vp-crossref/tests/fixtures/broken_link/docs/: page.md
crates/vp-crossref/tests/fixtures/unknown_rfc_ref/docs/: page.md
crates/vp-crossref/tests/fixtures/unknown_term_ref/docs/: page.md
crates/vp-crossref/tests/fixtures/valid_anchor/docs/: page.md  target.md
crates/vp-crossref/tests/fixtures/valid_html_anchor/docs/: page.md  target.md
crates/vp-crossref/tests/fixtures/valid_link/docs/: page.md  target.md
crates/vp-crossref/tests/fixtures/valid_rfc_ref/docs/: page.md
crates/vp-crossref/tests/fixtures/valid_term_ref/docs/: page.md
crates/vp-diagnostics/: Cargo.toml
crates/vp-diagnostics/src/: diagnostics.rs  lib.rs  report.rs  rule_id.rs  rule_metadata.rs  types.rs
crates/vp-edition/: Cargo.toml
crates/vp-edition/src/: edition.rs  lib.rs  registry_source.rs  validator.rs
crates/vp-edition/tests/: edition_fixtures.rs  spec_model_loading.rs
crates/vp-engine/: Cargo.toml
crates/vp-engine/src/: engine.rs  lib.rs  result.rs
crates/vp-registry/: Cargo.toml
crates/vp-registry/src/: lib.rs  registry_source.rs  registry_validator.rs  rfc_registry.rs  term_registry.rs  term_registry_validator.rs
crates/vp-registry/tests/: rfc_registry_fixtures.rs  spec_model_loading.rs  term_registry_fixtures.rs
crates/vp-registry/tests/fixtures/duplicate_id/: registry.yaml
crates/vp-registry/tests/fixtures/invalid_yaml/: registry.yaml
crates/vp-registry/tests/fixtures/missing_path/: registry.yaml
crates/vp-registry/tests/fixtures/term/duplicate_id/: registry.yaml
crates/vp-registry/tests/fixtures/term/duplicate_title/: registry.yaml
crates/vp-registry/tests/fixtures/term/invalid_section_id/: registry.yaml
crates/vp-registry/tests/fixtures/term/invalid_yaml/: registry.yaml
crates/vp-registry/tests/fixtures/term/missing_normative_definition/: registry.yaml
crates/vp-registry/tests/fixtures/term/unknown_dependency/: registry.yaml
crates/vp-registry/tests/fixtures/term/unknown_stability/: registry.yaml
crates/vp-registry/tests/fixtures/term/valid/: registry.yaml
crates/vp-registry/tests/fixtures/unknown_dependency/: registry.yaml
crates/vp-registry/tests/fixtures/unknown_status/: registry.yaml
crates/vp-registry/tests/fixtures/valid/: registry.yaml
crates/vp-spec-model/: Cargo.toml
crates/vp-spec-model/src/: builder.rs  corpus.rs  document.rs  document_corpus.rs  error.rs  lib.rs  link_resolve.rs  reference_graph.rs  registry_set.rs  rfc.rs  specification.rs  terminology.rs
crates/vp-spec-model/src/reference_discovery/: constants.rs  discovery.rs  markdown.rs  mod.rs  reference.rs
crates/vp-spec-model/tests/: document_fixtures.rs  reference_graph_fixtures.rs  registry_fixtures.rs
docs/: CONFIGURATION_ARCHITECTURE.md  CROSS_REFERENCE_VALIDATION.md  EDITION_VALIDATION.md  REGISTRY_VALIDATION.md  SPECIFICATION_MODEL.md  VALIDATION_ENGINE.md  VALIDATION_OUTPUT.md
docs/adrs/: 0001-tooling-implementation-language.md  0002-workspace-architecture.md  0003-validator-execution-model.md  0004-configuration-model.md  0005-specification-model.md  0006-spec-model-migration-complete.md  0007-specification-model-stability.md  README.md
examples/: README.md
scripts/: readiness-gate.sh
src/: lib.rs
tests/: workspace.rs
