[workspace]
resolver = "2"
members = [
    ".",
    "crates/vp-cli",
    "crates/vp-core",
    "crates/vp-crossref",
    "crates/vp-diagnostics",
    "crates/vp-edition",
    "crates/vp-engine",
    "crates/vp-registry",
    "crates/vp-spec-model",
]

[package]
name = "veritypay-tooling"
description = "VerityPay specification tooling workspace"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dev-dependencies]
vp-core = { workspace = true }
vp-diagnostics = { workspace = true }
vp-engine = { workspace = true }
vp-registry = { workspace = true }

[lints]
workspace = true

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["VerityPay Core Team"]
repository = "https://github.com/VerityPay-Inc/veritypay-tooling"
rust-version = "1.85"

[workspace.dependencies]
vp-core = { path = "crates/vp-core" }
vp-crossref = { path = "crates/vp-crossref" }
vp-diagnostics = { path = "crates/vp-diagnostics" }
vp-edition = { path = "crates/vp-edition" }
vp-engine = { path = "crates/vp-engine" }
vp-registry = { path = "crates/vp-registry" }
vp-spec-model = { path = "crates/vp-spec-model" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
semver = "1"
regex = "1"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
