[package]
name = "vp-cli"
description = "VerityPay specification tooling CLI (vp)"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vp"
path = "src/main.rs"

[dependencies]
vp-core = { workspace = true }
vp-diagnostics = { workspace = true }
vp-engine = { workspace = true }
vp-registry = { workspace = true }

[lints]
workspace = true
