[package]
name = "vp-cli"
description = "VerityPay specification tooling CLI (vp)"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "vp_cli"
path = "src/lib.rs"

[[bin]]
name = "vp"
path = "src/main.rs"

[dependencies]
vp-core = { workspace = true }
vp-diagnostics = { workspace = true }
vp-engine = { workspace = true }
vp-crossref = { workspace = true }
vp-registry = { workspace = true }
vp-edition = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
