[package]
name = "vp-core"
description = "Shared validation context and validator contracts"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vp-diagnostics = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
