[package]
name = "vp-edition"
description = "Edition Manifest validator"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vp-core = { workspace = true }
vp-diagnostics = { workspace = true }
vp-spec-model = { workspace = true }
regex = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
vp-spec-model = { workspace = true }

[lints]
workspace = true
