[package]
name = "vp-spec-model"
description = "Typed specification model for veritypay-spec"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vp-core = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
